--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Theme-switcher</title>
+    <title>Social-Media-Dashboard</title>
     <link href="./output.css" rel="stylesheet">
 </head>
 <body class="dark:bg-background-50">
