adding toggle butoton on lg screen

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <link href="./output.css" rel="stylesheet">
 </head>
 <body class="dark:bg-background-50">
-    <div class="container box-border mx-auto flex justify-evenly  mt-5 h-50 sm:justify-center antialiased lg:hidden sm:w-full " > <!--container-->
+    <div class="container box-border mx-auto flex justify-evenly  mt-5 h-50 sm:justify-center antialiased sm:w-full " > <!--container-->
         <div class="flex h-fit  dark:bg-cardbg-50 bg-light-100 w-full m-3 " > <!--Media dashboard--> 
             <div class="mt-10 w-full"> <!--Heading + Followers-->
                 <h1 class= "text-black  dark:text-white-50 flex  font-bold text-3xl capitalize pl-1"> social media</h1> <span class="text-black flex dark:text-white font-bold text-3xl capitalize pl-1">Dashboard</span>
