--- a/src/index.html
+++ b/src/index.html
@@ -13,8 +13,8 @@
                 <h1 class= "text-black  dark:text-white-50 flex  font-bold text-3xl capitalize pl-1"> social media</h1> <span class="text-black flex dark:text-white font-bold text-3xl capitalize pl-1">Dashboard</span>
                 <p class="text-lg capitalize pb-3 pt-3 pl-1 text-black  dark:text-lightText-200"> total followers: 23,004</p>
             </div>
-            <div class="flex mt-10  p-5"><!--Togggle-themes-->
-                <svg  xmlns="http://www.w3.org/2000/svg"  id="sun"  fill="#fff"  viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-11">
+            <div class="flex mt-10  p-5 hover:cursor-pointer"><!--Togggle-themes-->
+                <svg  xmlns="http://www.w3.org/2000/svg "  id="sun"  fill="#fff"  viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-10 hidden">
                 <path stroke-linecap="round" stroke-linejoin="round" d="M12 3v2.25m6.364.386-1.591 1.591M21 12h-2.25m-.386 6.364-1.591-1.591M12 18.75V21m-4.773-4.227-1.591 1.591M5.25 12H3m4.227-4.773L5.636 5.636M15.75 12a3.75 3.75 0 1 1-7.5 0 3.75 3.75 0 0 1 7.5 0Z" />
                 </svg>
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none"  id="moon" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-10">
@@ -101,7 +101,7 @@
     </div>
 
 
-    <div class=" lg:flex lg:justify-start container mx-auto mt-10 mb-10  text-2xl font-medium antialiased capitalize  dark:text-white-50 ">
+    <div class=" lg:flex lg:justify-start container mx-auto mt-10 mb-10 sm:p-10 text-2xl font-medium antialiased capitalize  dark:text-white-50 ">
         <p>overview-Today</p>
     </div>
 
